Dotnet ef migrations and database updating is now fixed. Stubbler renderer service now only loads templates in the contstructor once. Removed some spacing in thread.mustache that was causing every top level comment to have spaces tacked on to the end of every merge field for some wierd reason I can only assume is a package bug.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -43,7 +43,7 @@ body,
 }
 
 #thread {
-    top: -20px;
+    top: 0px; /* -20px to fix gap if one pops up */
     padding: 10px 20px 5px 20px;
     height: 100%;
     overflow-y: auto;
